ADDED: Automatically switch to keyboard or joystick/gamepad mode if there is input from that device.
FIXED: Fixed indentation (use tabs) and alignment (use spaces).
FIXED: Fixed compiling with MSVC and improve build scripts.
FIXED: On Windows, use Unicode/UTF-8 (instead of the current codepage) for replay filenames and directory names.
FIXED: Fixed the quicksave note in the splash: save = F6, load = F9.
FIXED: Ctrl+S now also mutes music.
FIXED: Fixed implicit-function-declaration warnings. (implemented by @Rondom)
DONE: Use 8-bit audio samples as a workaround if using older (buggy) SDL2 versions (older than 2.0.4).
FIXED: Removed redefinition of SDL_COMPILE_TIME_ASSERT.
FIXED: Add (back) SDL_Joystick interface because not all joysticks are SDL_Controller compatible. (implemented by @vanfanel)
DONE: Convert waves to mixer sounds when they are loaded, not when they are first played. (suggested by @vanfanel)
FIXED: Updated Readme.txt - fix macOS instructions.
DONE: Added option to force pixel perfect scaling (integer scale factors).
FIXED: Show level number when cycling between replays with Tab.
DONE: Added option to change scaling method (sharp, fuzzy, blurry).
FIXED: Improved the accuracy of timers.
DONE: The debug timer (press T while running with debug cheats on) is now drawn transparently.
DONE: The left-to-right animation in the intro now runs at a fixed speed (instead of being CPU limited).
DONE: Added in-game menu (press Escape or Backspace) with ability to change settings while in-game.
CHANGE: Removed the startup prompt to enable or disable fixes/enhancements (no longer needed).
FIXED: Fixed turning off music not working.
DONE: Added option for disabling and enabling all customization options at once.
DONE: Added option for changing the mods directory (where the game looks for custom levelsets).
DONE: Added fix for hidden floors in level 12 not appearing until after the flashing stops.